--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,15 @@ $RECYCLE.BIN/
 log.txt
 npm-debug.log*
 
-.idea
+/.idea
 .ionic
 .sass-cache
 .sourcemaps
 .versions
-.vscode
 coverage
 dist
 node_modules
 platforms
 plugins
 www
+.vscode
