--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@turf/turf": "^5.1.6",
     "mapbox-gl": "^1.12.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
